# sw-install

./: .gitignore  Cargo.toml  README.md  build.rs  learnings.md
components/sw-install-cli/: Cargo.toml  build.rs
components/sw-install-cli/src/: help.txt  install.rs  lib.rs  main.rs  manage.rs  version.rs
components/sw-install-cli/tests/: config_tests.rs  error_tests.rs  installer_tests.rs  lister_tests.rs  output_tests.rs  validator_tests.rs
components/sw-install-core/: Cargo.toml
components/sw-install-installer/: Cargo.toml
components/sw-install-list/: Cargo.toml
components/sw-install-manage/: Cargo.toml
components/sw-install-validation/: Cargo.toml
components/sw-install-validation/src/: detect.rs  extract.rs  lib.rs  source.rs
components/sw-install-workspace/: Cargo.toml
docs/: architecture.md  claude-web-research-preview-notes.md  design.md  plan.md  prd.md  process.md  refactor-plan.md  refactoring-to-sw-standards.md  status.md
scripts/: build-all.sh  build.sh  clean-all.sh  pre-commit-check.sh  run.sh
src/: config.rs  error.rs  installer.rs  lib.rs  lister.rs  main.rs  operations.rs  output.rs  setup.rs  uninstaller.rs  validator.rs
src/operations/: mod.rs  uninstaller.rs
tests/: config_tests.rs  installer_tests.rs  output_tests.rs  setup_tests.rs  test_helpers.rs  uninstaller_tests.rs  validator_tests.rs
wiki/: Architecture-Diagrams.md  Architecture-Overview.md  Build-System.md  CLI-Interface.md  Configuration.md  Data-Flow.md  Error-Handling.md  Home.md  Installer.md  Output-Handler.md  Sequence-Diagrams.md  Setup.md  Testing-Strategy.md  Uninstaller.md  Validator.md
(+16 files in other folders)
