[package]
name = "sw-install"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "Install softwarewrighter binaries to local PATH"
repository = "https://github.com/softwarewrighter/sw-install"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
